<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rankin.adam.cookingmaster.activity.AddRecipeActivity">

    <Button
        android:id="@+id/addRecipeAct_btn_add_recipe"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/time"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:gravity="end" />

    <TextView
        android:layout_width="54dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:text="@string/mins"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/addRecipeAct_txt_time"
        app:layout_constraintStart_toEndOf="@+id/addRecipeAct_txt_time" />

    <EditText
        android:id="@+id/addRecipeAct_txt_time"
        android:layout_width="43dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/zeros"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/addRecipeAct_txt_name"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="163dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/recipe_name_label"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addRecipeAct_txt_name"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/default_recipe_name"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="recipe name" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/allergens_label"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/addRecipeAct_txt_allergen_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_allergens"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/addRecipeAct_txt_time" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/instructions"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/addRecipeAct_txt_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecipeAct_btn_add_image" />

    <EditText
        android:id="@+id/addRecipeAct_txt_instructions"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="358dp"
        android:layout_height="155dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/addRecipeAct_btn_add_recipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:autofillHints="instructions" />

    <Button
        android:id="@+id/addRecipeAct_btn_cancel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ingredients_label"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/addRecipeAct_txt_allergen_list" />

    <Button
        android:id="@+id/addRecipeAct_btn_set_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:text="@string/set"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/addRecipeAct_txt_allergen_list" />

    <ImageButton
        android:id="@+id/addRecipeAct_btn_add_image"
        android:layout_width="64dp"
        android:layout_height="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/default_recipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecipeAct_btn_set_ingredients"
        android:contentDescription="@string/recipe_image" />

    <Button
        android:id="@+id/btn_add_from_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_from_url"
        app:layout_constraintBottom_toBottomOf="@+id/addRecipeAct_btn_cancel"
        app:layout_constraintEnd_toStartOf="@+id/addRecipeAct_btn_add_recipe"
        app:layout_constraintStart_toEndOf="@+id/addRecipeAct_btn_cancel"
        app:layout_constraintTop_toTopOf="@+id/addRecipeAct_btn_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>
