...

    <Button
        android:id="@+id/ingrDialog_btn_add_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="ADD"
        app:layout_constraintBaseline_toBaselineOf="@+id/ingrDialog_txt_add_ingredient"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingrDialog_recyclerView"
        android:layout_width="0dp"
...
