...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rankin.adam.cookingmaster.activity.MainActivity">


    <Button
        android:id="@+id/mainAct_btn_recipe_book"
        android:layout_height="72dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:text="@string/recipe_book"
...
