<resources xmlns:tools="http://schemas.android.com/tools">
    <string-array name="units_array">
        <item>lb</item>
        <item>kg</item>
        <item>grams</item>
        <item>ounces</item>
        <item>packages</item>
        <item>pieces</item>
        <item>gallons</item>
        <item>liters</item>
    </string-array>

    <string-array name="recipe_units_array">
        <item>cups</item>
        <item>grams</item>
        <item>TSP</item>
        <item>TBSP</item>
        <item>chunks</item>
        <item>pieces</item>
        <item>pinch</item>
        <item>pint</item>
        <item>quart</item>
    </string-array>

    <string-array name="allergens">
        <item>Soy</item>
        <item>Wheat</item>
        <item>Dairy</item>
        <item>Peanuts</item>
        <item>Tree nuts</item>
        <item>Fish</item>
        <item>Shellfish</item>
        <item>Eggs</item>
    </string-array>

    <string name="app_name">Cooking Master</string>
    <string name="title_activity_login" tools:keep="@string/title_activity_login">Sign in</string>

    <!-- Buttons, labels, etc-->
    <string name="recipe_book">RECIPE BOOK</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="main">Main</string>
    <string name="recipes">Recipes</string>
    <string name="search_recipes">SEARCH RECIPES</string>
    <string name="max_time">Max Time:</string>
    <string name="contains">Contains:</string>
    <string name="allergens">Allergens</string>
    <string name="none">None</string>
    <string name="ingredient">Ingredient</string>
    <string name="time">Time:</string>
    <string name="mins">Mins</string>
    <string name="recipe_name_label">Recipe Name:</string>
    <string name="set">Set</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients_label">Ingredients:</string>
    <string name="no_allergens">No Allergens</string>
    <string name="allergens_label">Allergens:</string>
    <string name="cancel">Cancel</string>
    <string name="previous_recipe">Previous Recipe</string>
    <string name="next_recipe">Next Recipe</string>
    <string name="spices">Spices</string>
    <string name="shopping_list">Shopping List</string>
    <string name="options">Options</string>
    <string name="clear_list">Clear List</string>
    <string name="buy">Buy</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="time_label">time:</string>
    <string name="instructions">Instructions</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cook">Cook</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="scale">Scale</string>
    <string name="timer">Timer</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="pantry">Pantry</string>
    <string name="app_logo">App Logo</string>
    <string name="default_recipe_name">Chicken Galina</string>
    <string name="zeros">00</string>

    <!-- Input Validation-->
    <string name="scaleRecipeFactor">Please enter a valid scale factor</string>
    <string name="scaleRecipeDialogTitle">Set recipe scale factor</string>
    <string name="clear">CLEAR</string>
    <string name="title_activity_spice_rack">SpiceRackActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supersede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="add_from_url">Add from URL</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="amount">amount</string>
    <string name="unit">unit</string>
    <string name="_00_00">00:00</string>
    <string name="timer_title">Timer Title</string>
    <string name="units">units</string>
    <string name="list">list</string>
    <string name="paste_url">paste URL</string>
    <string name="recipe_photo_thumbnail">recipe photo thumbnail</string>
    <string name="zoomed_in_photo">zoomed in photo</string>
    <string name="action_settings">action settings</string>
    <string name="recipe_image">recipe image</string>
    <string name="note">note</string>


</resources>
