...
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/ingredients"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/cookRecipeFrag_btn_show_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/instructions"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <TextView
        android:id="@+id/cookRecipeFrag_txt_instructions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
...
